--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
-# EcoSignLyc-e
-<DOCTYPE html>
-<html lang="fr"
+<!DOCTYPE html>
+<html lang="fr">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport">
-content="width=device-width, initial-scale=1.0>
-  <title>EcoSignLyc-c</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon site</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            color: #333;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            color: #007bff;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        button {
+            background-color: #007bff;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
-  <h1>Bienvenus sur mon site</h1>
-  <p>Site hébergé gratuitement avec Github Pages.</p>
+    <div class="container">
+        <h1>Bienvenue sur mon site</h1>
+        <p>Ce site est hébergé gratuitement avec GitHub Pages.</p>
+        <button onclick="alert('Bouton cliqué !')">Clique-moi</button>
+    </div>
 </body>
 </html>
