--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             background-color: #0056b3;
         }
     </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
