--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bienvenue sur EcoSign</h1>
+        <h1>Bienvenue sur mon site</h1>
         <p>Ce site est hébergé gratuitement avec GitHub Pages.</p>
         <button onclick="alert('Bouton cliqué !')">Clique-moi</button>
     </div>
